--- a/compose-recipes/mysql/docker-compose.mysql.yaml
+++ b/compose-recipes/mysql/docker-compose.mysql.yaml
@@ -10,7 +10,8 @@ services:
             test: "mysqladmin ping -h localhost"
             timeout: 20s
         image: mysql:5.7
-        network_mode: host
+        ports:
+            - "3306:3306"
     liferay:
         depends_on:
             database:
@@ -18,5 +19,5 @@ services:
         environment:
             - LIFERAY_JDBC_PERIOD_DEFAULT_PERIOD_DRIVER_UPPERCASEC_LASS_UPPERCASEN_AME=com.mysql.cj.jdbc.Driver
             - LIFERAY_JDBC_PERIOD_DEFAULT_PERIOD_PASSWORD=
-            - LIFERAY_JDBC_PERIOD_DEFAULT_PERIOD_URL=jdbc:mysql://localhost/${DATABASE_NAME}?useUnicode=true&characterEncoding=UTF-8
+            - LIFERAY_JDBC_PERIOD_DEFAULT_PERIOD_URL=jdbc:mysql://database/${DATABASE_NAME}?useUnicode=true&characterEncoding=UTF-8
             - LIFERAY_JDBC_PERIOD_DEFAULT_PERIOD_USERNAME=root
