--- a/docker-compose.liferay.yaml
+++ b/docker-compose.liferay.yaml
@@ -7,4 +7,7 @@ services:
             test: "/opt/liferay/health-check.sh"
             timeout: 5m
         image: "${LIFERAY_IMAGE_NAME}"
-        network_mode: host
+        ports:
+          - "8080:8080"
+          - "${LIFERAY_TELNET_PORT}:11311"
+          - "${LIFERAY_DEBUG_PORT}:8000"
