syncs the liferay data folder for now

--- a/docker-compose.liferay.yaml
+++ b/docker-compose.liferay.yaml
@@ -11,3 +11,5 @@ services:
           - "8080:8080"
           - "${LIFERAY_TELNET_PORT}:11311"
           - "${LIFERAY_DEBUG_PORT}:8000"
+        volumes:
+          - ./data/liferay/data:/opt/liferay/data
