--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,8 @@ composeUp {
 }
 
 dockerCompose {
+	captureContainersOutput = true
+
 	environment.put "DATABASE_NAME", config.databaseName
 	environment.put "LIFERAY_IMAGE_NAME", config.liferayDockerImageId
 	environment.put "LIFERAY_DEBUG_PORT", config.liferayDebugPort
