--- a/compose-recipes/mysql/docker-compose.mysql.yaml
+++ b/compose-recipes/mysql/docker-compose.mysql.yaml
@@ -1,6 +1,6 @@
 services:
     database:
-        command: mysqld --character-set-filesystem=utf8 --character-set-server=utf8 --collation-server=utf8_general_ci --max_allowed_packet=32M
+        command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci --lower_case_table_names=1 --log_warnings=1
         container_name: "${NAMESPACE}-database-mysql"
         environment:
             - MYSQL_ALLOW_EMPTY_PASSWORD=1
