adds option for debugging failing container startup

--- a/build.gradle
+++ b/build.gradle
@@ -132,4 +132,7 @@ dockerCompose {
 
 	tcpPortsToIgnoreWhenWaiting = [config.liferayDebugPort, config.liferayTelnetPort]
 	useComposeFiles = config.composeFiles
+
+	// DEBUG: Set to true if container startup is failing
+	retainContainersOnStartupFailure = false
 }
