--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import de.undercouch.gradle.tasks.download.Download
+import groovy.json.JsonSlurper
 
 plugins {
 	id "com.avast.gradle.docker-compose" version "0.17.10"
@@ -61,6 +62,51 @@ config.liferayDockerImageId = gradle.liferayWorkspace.dockerImageId as String
 /*
 --- END User configuration
  */
+
+
+static boolean isEmpty(List list) {
+	if (list == null) {
+		return true;
+	}
+
+	if (list.isEmpty()) {
+		return true;
+	}
+
+	return false;
+}
+static boolean isNotEmpty(List list) {
+	return !isEmpty(list)
+}
+
+JsonSlurper jsonSlurper = new JsonSlurper()
+
+File configFile = project.file("config.json")
+
+if (configFile.exists()) {
+	Object configFileObject = jsonSlurper.parseText(configFile.text)
+
+	List composeProfiles = configFileObject.composeProfiles as List
+	String databaseName = configFileObject.databaseName as String
+	List hotfixURLs = configFileObject.hotfixURLs as List
+	String namespace = configFileObject.namespace as String
+
+	if (isNotEmpty(composeProfiles)) {
+		config.composeProfiles = composeProfiles
+	}
+
+	if (databaseName != null) {
+		config.databaseName = databaseName
+	}
+
+	if (isNotEmpty(hotfixURLs)) {
+		config.hotfixURLs = hotfixURLs
+	}
+
+	if (namespace != null) {
+		config.namespace = namespace
+	}
+}
 
 ConfigurableFileTree dockerComposeFileTree = project.fileTree(projectDir) {
 	include "**/docker-compose.*.yaml"
