--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,1 +1,9 @@
 name: "${NAMESPACE}"
+services:
+    data-helper:
+        build: ./helper
+        container_name: ${NAMESPACE}-data-helper
+        volumes:
+            - data:/data
+volumes:
+    data:
