--- a/docker-compose.liferay.yaml
+++ b/docker-compose.liferay.yaml
@@ -8,12 +8,12 @@ services:
             timeout: 5m
         image: "${LIFERAY_IMAGE_NAME}"
         ports:
-          - "8080:8080"
-          - "${LIFERAY_TELNET_PORT}:11311"
-          - "${LIFERAY_DEBUG_PORT}:8000"
+            - "8080:8080"
+            - "${LIFERAY_TELNET_PORT}:11311"
+            - "${LIFERAY_DEBUG_PORT}:8000"
         volumes:
-          - type: volume
-            source: data
-            target: /opt/liferay/data
-            volume:
-                subpath: container-data/liferay
+            - source: data
+              target: /opt/liferay/data
+              type: volume
+              volume:
+                  subpath: container-data/liferay
