--- a/helper/Dockerfile
+++ b/helper/Dockerfile
@@ -1,11 +1,11 @@
 FROM busybox:latest
 
-COPY ./data /data/container-data
+COPY --chown=1000:1000 ./data /data/container-data
 
 RUN mkdir -p /data/container-data/elasticsearch
 RUN mkdir -p /data/container-data/liferay
 RUN mkdir -p /data/container-data/mysql
 
-COPY ./dumps /data/dumps
+COPY --chown=1000:1000 ./dumps /data/dumps
 
 RUN mkdir -p /data/dumps/mysql
