simplify where dumps are placed since there will only be one database at a time

--- a/compose-recipes/mysql/docker-compose.mysql.yaml
+++ b/compose-recipes/mysql/docker-compose.mysql.yaml
@@ -32,7 +32,7 @@ services:
               target: /docker-entrypoint-initdb.d
               type: volume
               volume:
-                  subpath: dumps/mysql
+                  subpath: dumps
             - source: data-volume
               target: /var/lib/mysql
               type: volume
