adds new lr.docker.environment.cluster.nodes property to declare the number of desired cluster nodes

--- a/gradle.properties
+++ b/gradle.properties
@@ -64,3 +64,7 @@ lr.docker.environment.hotfix.urls=
 # The namesapce to use for the docker-compose instance.
 # You should not need to change this.
 lr.docker.environment.namespace=lrwsde
+
+# The number of cluster nodes to start up in addition to the main Liferay
+# instance. Setting this to 0 means there is no clustering.
+lr.docker.environment.cluster.nodes=0
