--- a/gradle.properties
+++ b/gradle.properties
@@ -61,7 +61,7 @@ lr.docker.environment.hotfix.urls=
 
 # Required
 #
-# The namesapce to use for the docker-compose instance.
+# The namespace to use for the docker-compose instance.
 # You should not need to change this.
 lr.docker.environment.namespace=lrwsde
 
