--- a/gradle.properties
+++ b/gradle.properties
@@ -32,12 +32,12 @@ lr.docker.environment.compose.files=
 
 # Required
 #
-# Comma-separated list of "profiles" to include in your environment.
-lr.docker.environment.compose.profiles=\
-	liferay,\
-	\
-	elasticsearch,\
-	mysql
+# Enable each service or "profile" that you would like to include in your
+# environment. If the value is "true" or "1", the service is enabled. Any other
+# value (or a blank value) is ignored and disables the service.
+lr.docker.environment.compose.profile.enabled[liferay]=true
+lr.docker.environment.compose.profile.enabled[elasticsearch]=true
+lr.docker.environment.compose.profile.enabled[mysql]=true
 
 # Optional
 #
