--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ Config:
 ------------------------
 hotfixURLs: ${hotfixURLs}
 namespace: ${namespace}
+clusterNodes: ${clusterNodes}
 composeFiles: ${composeFiles}
 composeProfiles: ${composeProfiles}
 databaseName: ${databaseName}
