elasticsearch: matches cluster name

--- a/compose-recipes/elasticsearch/docker-compose.elasticsearch.yaml
+++ b/compose-recipes/elasticsearch/docker-compose.elasticsearch.yaml
@@ -12,8 +12,10 @@ services:
         container_name: "${NAMESPACE}-elasticsearch"
         environment:
             - ES_JAVA_OPTS=-Xms1g -Xmx1g
-            - cluster.name=liferay_cluster
+            - cluster.name=LiferayElasticsearchCluster
             - discovery.type=single-node
+            - http.port=9200
+            - transport.port=9300
             - xpack.ml.enabled=false
             - xpack.monitoring.enabled=false
             - xpack.security.enabled=false
