--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ microsoft.translator.subscription.key=
 
 # Required
 #
-# Sets the Liferay product verison. Will also set a Liferay Docker image version.
+# Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
 liferay.workspace.product=dxp-2024.q3.8
 
