adds DATA_DIRECTORY variable

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DATA_DIRECTORY=${DATA_DIRECTORY:-data}
 DATABASE_NAME=${DATABASE_NAME:-lportal}
 LIFERAY_IMAGE_NAME=${LIFERAY_IMAGE_NAME:-liferay/dxp:latest}
 NAMESPACE=${NAMESPACE:-lportal}
