turns off debug logging by default

--- a/build.gradle
+++ b/build.gradle
@@ -189,8 +189,11 @@ composeUp {
 }
 
 dockerCompose {
-	captureContainersOutput = true
-	captureContainersOutputToFiles = project.file('containerLogs')
+	// DEBUG: Set to true to print container startup output to the console
+	captureContainersOutput = false
+
+	// DEBUG: Uncomment to dump the container logs to a directory for inspection
+	// captureContainersOutputToFiles = project.file('containerLogs')
 
 	environment.put "DATA_DIRECTORY", config.dataDirectory
 	environment.put "DATABASE_NAME", config.databaseName
